--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -64,19 +64,19 @@
 
   <%= render "shared/form_attachment",
     form: f,
-    entity: @lesson,
+    entity: @project,
     attribute: :first_photocopy,
     label: "Photocopy 1" %>
 
   <%= render "shared/form_attachment",
     form: f,
-    entity: @lesson,
+    entity: @project,
     attribute: :second_photocopy,
     label: "Photocopy 2" %>
 
   <%= render "shared/form_attachment",
     form: f,
-    entity: @lesson,
+    entity: @project,
     attribute: :third_photocopy,
     label: "Photocopy 3" %>
 
