change donation button back to local page

--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -7,7 +7,7 @@
     <%= nav_link page[:name], page[:path] %>
     <% end %>
     <li class="nav-menu-item donate<%= ' current' if current_page?('/donate') %>">
-      <a href="https://www.generosity.com/education-fundraising/every-child-deserves-a-space-to-doodle">
+      <a href="/donate">
         <div class="btn btn-blue nav-donate-btn">
           Donate
         </div>
