--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -23,7 +23,7 @@
       |
       <a href="http://instagram.com/doodlesacademy" target="_blank"><img class='footer-logo' src="Instagram-v051916.png" /></a>
       |
-      <a href="http://linkedin.com/doodlesacademy" target="_blank"><img class='footer-logo' src="In-2C-14px.png" /></a>
+      <a href="https://www.linkedin.com/company/doodles-academy" target="_blank"><img class='footer-logo' src="In-2C-14px.png" /></a>
     </div>
     <div class="footer-social">
       <%= link_to "Contact", contact_path %>
