changes to projects & lessons

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -63,3 +63,13 @@
     display: inline;
   }
 }
+
+.photocopy-admin {
+  margin-bottom:-20px
+}
+
+.photocopy {
+  input[type='file'] {
+  color: transparent;   
+  }
+}
