--- a/app/views/lessons/_lesson.html.erb
+++ b/app/views/lessons/_lesson.html.erb
@@ -35,17 +35,19 @@
     <h2 id='photocopies' class="overview-heading anchor">Photocopies</h2>
     <p>
       <% if @lesson.first_photocopy.present? %>
-      <p><%= link_to @lesson.first_photocopy_file_name, @lesson.first_photocopy.url %></p>
+        <p><%= @lesson.first_photocopy_header %></p>
+        <p class="pdf-indent"><%= link_to @lesson.first_photocopy_file_name, @lesson.first_photocopy.url %></p>
       <% else %>
-      <%= "N/A" %>
+        <%= "N/A" %>
       <% end %>
       <% if @lesson.second_photocopy.present? %>
-      <p><%= link_to @lesson.second_photocopy_file_name, @lesson.second_photocopy.url %></p>
+      <p><%= @lesson.second_photocopy_header %></p>
+      <p class="pdf-indent"><%= link_to @lesson.second_photocopy_file_name, @lesson.second_photocopy.url %></p>
       <% end %>
       <% if @lesson.third_photocopy.present? %>
-      <p><%= link_to @lesson.third_photocopy_file_name, @lesson.third_photocopy.url %></p>
+      <p><%= @lesson.third_photocopy_header %></p>
+      <p class="pdf-indent"><%= link_to @lesson.third_photocopy_file_name, @lesson.third_photocopy.url %></p>
       <% end %>
-
     </p>
     <h2 id='media' class="overview-heading anchor">Media</h2>
     <p><%= @lesson.media %></p>
