--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -110,6 +110,10 @@
     background-clip: padding-box;
   }
 
+  #watch {
+    margin-bottom: 20px;
+  }
+
 }
 
 .collapsed {
@@ -179,5 +183,23 @@ a.modal-insp:hover {
     margin-left: 10px;
     margin-top: -10px;
     font-size: 85%;
+  }
+}
+
+.collapsed li {
+  margin-left: 20px;
+
+  &:last-child {
+    margin-bottom: 20px;
+  }
+}
+
+.collapsible-heading h3 {
+  margin-top: 5px;
+}
+
+#look-at, #check-for, #worktime-ind, #worktime-grp {
+  .collapsible-plus h2 {
+    color: #666666;
   }
 }
