--- a/app/views/lessons/_lesson.html.erb
+++ b/app/views/lessons/_lesson.html.erb
@@ -59,10 +59,10 @@
 
     <% if @lesson.pre_work.present? %>
       <a><div class='collapsible anchor' id='pre-work'>
-        <div class='collapsible-heading'>
-          <h2 class="lesson-heading">2m, pre-work</h2>
+        <div>
+          <h2 class="lesson-heading">2m, pre-work<span class="glyphicon glyphicon-plus"></span></h2>
         </div>
-        <div class='collapsible-plus'><h2>+</h2></div>
+        <!-- <div class='collapsible-plus'><h2>+</h2></div> -->
       </div></a>
       <div class='pre-work-collapsed collapsed' hidden>
         <h3><%= @lesson.pre_work_heading %></h3>
@@ -88,10 +88,10 @@
 
     <a><div class='collapsible' id="look-at">
 
-      <div class='collapsible-heading'>
-        <h3>look and discuss an art piece that introduces some of the lesson concepts</h3>
+      <div>
+        <h3>look and discuss an art piece that introduces some of the lesson concepts<span class="glyphicon glyphicon-plus"></h3>
       </div>
-      <div class='collapsible-plus'><h2>+</h2></div>
+      <!-- <div class='collapsible-plus'><h2>+</h2></div> -->
 
     </div></a>
     <div class='look-at-collapsed collapsed' hidden>
@@ -121,27 +121,26 @@
 
     <a><div class='collapsible' id="check-for">
 
-        <div class='collapsible-heading'>
-          <h3>check for understanding</h3>
+        <div>
+          <h3>check for understanding<span class="glyphicon glyphicon-plus"></span></h3>
         </div>
-        <div class='collapsible-plus'><h2>+</h2></div>
 
       </div></a>
       <div class='check-for-collapsed collapsed' hidden>
-      <p>Check for understanding by asking, “Who was listening closely that can sum up what we are doing today?” Make sure that student artists can list all the steps and clarify anything that needs clarifying.</p>
-      <% if @lesson.check_for_understanding.present? %>
-        <%= markdown @lesson.check_for_understanding %>
-      <% end %>
-    </div>
+        <p>Check for understanding by asking, “Who was listening closely that can sum up what we are doing today?” Make sure that student artists can list all the steps and clarify anything that needs clarifying.</p>
+        <% if @lesson.check_for_understanding.present? %>
+          <%= markdown @lesson.check_for_understanding %>
+        <% end %>
+      </div>
 
 
     <h2 class="lesson-heading anchor" id='worktime'>20-25m, worktime</h2>
     <% if @lesson.independent_worktime.present? %>
       <a><div class='collapsible' id='worktime-ind'>
-        <div class='collapsible-heading'>
-          <h3>independent</h3>
+        <div>
+          <h3>independent<span class="glyphicon glyphicon-plus"></span</h3>
         </div>
-        <div class='collapsible-plus'><h2>+</h2></div>
+        <!-- <div class='collapsible-plus'><h2>+</h2></div> -->
       </div></a>
 
       <div class='worktime-ind-collapsed collapsed' hidden>
@@ -151,10 +150,10 @@
       </div>
     <% elsif @lesson.group_worktime.present? %>
       <a><div class='collapsible' id='worktime-grp'>
-        <div class='collapsible-heading'>
-          <h3>group</h3>
+        <div>
+          <h3>group<span class="glyphicon glyphicon-plus"></span></h3>
         </div>
-        <div class='collapsible-plus'><h2>+</h2></div>
+        <!-- <div class='collapsible-plus'><h2>+</h2></div> -->
       </div></a>
       <div class='worktime-grp-collapsed collapsed' hidden>
         <p><%= @lesson.group_worktime %></p>
@@ -169,24 +168,28 @@
 
     <% if @lesson.additional_worktime.present? %>
       <a><div class='collapsible anchor' id='additional-worktime'>
-        <div class='collapsible-heading'>
-          <h2 class="lesson-heading">additional worktime</h2>
+        <div>
+          <h2 class="lesson-heading">additional worktime<span class="glyphicon glyphicon-plus"></span></h2>
         </div>
-        <div class='collapsible-plus'><h2>+</h2></div>
+        <!-- <div class='collapsible-plus'><h2>+</h2></div> -->
       </div></a>
       <div class='additional-worktime-collapsed collapsed' hidden>
         <p><%= @lesson.additional_worktime %></p>
       </div>
     <% end %>
 
-    <a><div class='collapsible anchor' id='clean-up-presentations'>
-      <div class='collapsible-heading'>
-        <h2 class="lesson-heading">5-10m, clean-up/presentations</h2>
-      </div>
-      <div class='collapsible-plus'><h2>+</h2></div>
-    </div></a>
-      <div class='clean-up-presentations-collapsed collapsed' hidden>
-        <h3>students discuss the artistic decisions that they made using 'what, how, and why' then take comments or questions.</h3>
+    <h2 class="lesson-heading anchor" id='clean-up-presentations'>5-10m, clean-up/presentations</h2>
+
+      <a><div class='collapsible' id='students-discuss'>
+        <div>
+          <h3>students discuss the artistic decisions that they made<span class="glyphicon glyphicon-plus"></span</h3>
+        </div>
+        <!-- <div class='collapsible-plus'><h2>+</h2></div> -->
+      </div></a>
+
+
+      <div class='students-discuss-collapsed collapsed' hidden>
+        <p>Use 'what, how, and why' and then take comments or questions.</p>
         <p>Depending on the teacher’s style of classroom management, it might be helpful to only choose and train a few kids to clean. The rest of the class can be busy with the presentation. Make sure to train these helpers well in advance so that you aren’t left with a messy room.</p>
         <p>Clean-up times will vary with materials; get to know your class and allow 5-10 minutes depending on how efficient they are and whether or not the material was messy.</p>
         <p>Choose presenting student artists in advance and let them know during their work time so that they are prepared.</p>
@@ -207,21 +210,19 @@
 <div id="extension">
   <h1 class="extension-head heading">Extension</h1>
 
-    <a><div class='collapsible anchor' id='anticipated-problems'>
-      <div class='collapsible-heading'>
-        <h2 class="extension-heading">anticipated problems</h2>
-      </div>
-      <div class='collapsible-plus'><h2>+</h2></div>
-    </div></a>
-    <div class='anticipated-problems-collapsed collapsed' hidden>
-      <p><%= @lesson.anticipated_problems %></p>
+  <a><div class='collapsible anchor' id='anticipated-problems'>
+    <div>
+      <h2 class="extension-heading">anticipated problems<span class="glyphicon glyphicon-plus"></span></h2>
     </div>
+  </div></a>
+  <div class='anticipated-problems-collapsed collapsed' hidden>
+    <p><%= @lesson.anticipated_problems %></p>
+  </div>
 
   <a><div class='collapsible anchor' id='early-finishers'>
-    <div class='collapsible-heading'>
-      <h2 id='early-finishers' class="extension-heading">early finishers</h2>
+    <div>
+      <h2 class="extension-heading">early finishers<span class="glyphicon glyphicon-plus"></span></h2>
     </div>
-    <div class='collapsible-plus'><h2>+</h2></div>
   </div></a>
   <div class='early-finishers-collapsed collapsed' hidden>
     <p><%= @lesson.early_finishers %></p>
