--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -65,7 +65,7 @@
   <div>
 
     <% if @project.common_core.present? %>
-      <a><div class='collapsible anchor' id='project-common-core'>
+      <a><div class='collapsible' id='project-common-core'>
         <div>
           <h2>common core<span class="glyphicon glyphicon-plus"></span></h2>
         </div>
@@ -76,7 +76,7 @@
     <% end %>
 
     <% if @project.national_core.present?  %>
-      <a><div class='collapsible anchor' id='project-national-core'>
+      <a><div class='collapsible' id='project-national-core'>
         <div>
           <h2>national core visual art standards<span class="glyphicon glyphicon-plus"></span></h2>
         </div>
