--- a/app/views/lessons/_lesson.html.erb
+++ b/app/views/lessons/_lesson.html.erb
@@ -62,7 +62,6 @@
         <div>
           <h2 class="lesson-heading">2m, pre-work<span class="glyphicon glyphicon-plus"></span></h2>
         </div>
-        <!-- <div class='collapsible-plus'><h2>+</h2></div> -->
       </div></a>
       <div class='pre-work-collapsed collapsed' hidden>
         <h3><%= @lesson.pre_work_heading %></h3>
@@ -91,7 +90,6 @@
       <div>
         <h3>look and discuss an art piece that introduces some of the lesson concepts<span class="glyphicon glyphicon-plus"></h3>
       </div>
-      <!-- <div class='collapsible-plus'><h2>+</h2></div> -->
 
     </div></a>
     <div class='look-at-collapsed collapsed' hidden>
@@ -138,9 +136,8 @@
     <% if @lesson.independent_worktime.present? %>
       <a><div class='collapsible' id='worktime-ind'>
         <div>
-          <h3>independent<span class="glyphicon glyphicon-plus"></span</h3>
+          <h3>independent<span class="glyphicon glyphicon-plus"></span></h3>
         </div>
-        <!-- <div class='collapsible-plus'><h2>+</h2></div> -->
       </div></a>
 
       <div class='worktime-ind-collapsed collapsed' hidden>
@@ -153,7 +150,6 @@
         <div>
           <h3>group<span class="glyphicon glyphicon-plus"></span></h3>
         </div>
-        <!-- <div class='collapsible-plus'><h2>+</h2></div> -->
       </div></a>
       <div class='worktime-grp-collapsed collapsed' hidden>
         <p><%= @lesson.group_worktime %></p>
@@ -171,7 +167,6 @@
         <div>
           <h2 class="lesson-heading">additional worktime<span class="glyphicon glyphicon-plus"></span></h2>
         </div>
-        <!-- <div class='collapsible-plus'><h2>+</h2></div> -->
       </div></a>
       <div class='additional-worktime-collapsed collapsed' hidden>
         <p><%= @lesson.additional_worktime %></p>
@@ -182,11 +177,9 @@
 
       <a><div class='collapsible' id='students-discuss'>
         <div>
-          <h3>students discuss the artistic decisions that they made<span class="glyphicon glyphicon-plus"></span</h3>
+          <h3>students discuss the artistic decisions that they made<span class="glyphicon glyphicon-plus"></span></h3>
         </div>
-        <!-- <div class='collapsible-plus'><h2>+</h2></div> -->
       </div></a>
-
 
       <div class='students-discuss-collapsed collapsed' hidden>
         <p>Use 'what, how, and why' and then take comments or questions.</p>
@@ -204,24 +197,23 @@
       </div>
     </div>
 
-
   <hr />
 
 <div id="extension">
   <h1 class="extension-head heading">Extension</h1>
 
-  <a><div class='collapsible anchor' id='anticipated-problems'>
+  <a><div class='collapsible' id='anticipated-problems'>
     <div>
-      <h2 class="extension-heading">anticipated problems<span class="glyphicon glyphicon-plus"></span></h2>
+      <h2 class="extension-heading anchor">anticipated problems<span class="glyphicon glyphicon-plus"></span></h2>
     </div>
   </div></a>
   <div class='anticipated-problems-collapsed collapsed' hidden>
     <p><%= @lesson.anticipated_problems %></p>
   </div>
 
-  <a><div class='collapsible anchor' id='early-finishers'>
+  <a><div class='collapsible' id='early-finishers'>
     <div>
-      <h2 class="extension-heading">early finishers<span class="glyphicon glyphicon-plus"></span></h2>
+      <h2 class="extension-heading anchor">early finishers<span class="glyphicon glyphicon-plus"></span></h2>
     </div>
   </div></a>
   <div class='early-finishers-collapsed collapsed' hidden>
