fixed social link logos

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -17,13 +17,13 @@
     </div>
     <div class="footer-social">
 
-      <a href="http://twitter.com/doodlesacademy" target="_blank"><img class='footer-logo' src="TwitterLogo_55acee.png" /></a>
+      <a href="http://twitter.com/doodlesacademy" target="_blank"><%= image_tag 'TwitterLogo_55acee.png', class:"footer-logo", alt:"Twitter" %></a>
       |
-      <a href="http://facebook.com/doodlesacademy" target="_blank"><img class='footer-logo' src="FB-f-Logo__blue_50.png" /></a>
+      <a href="http://facebook.com/doodlesacademy" target="_blank"><%= image_tag 'FB-f-Logo__blue_50.png', class:"footer-logo", alt:"Facebook"  %></a>
       |
-      <a href="http://instagram.com/doodlesacademy" target="_blank"><img class='footer-logo' src="Instagram-v051916.png" /></a>
+      <a href="http://instagram.com/doodlesacademy" target="_blank"><%= image_tag 'Instagram-v051916.png', class:"footer-logo", alt:"Instagram"  %></a>
       |
-      <a href="https://www.linkedin.com/company/doodles-academy" target="_blank"><img class='footer-logo' src="In-2C-48px-R.png" /></a>
+      <a href="https://www.linkedin.com/company/doodles-academy" target="_blank"><%= image_tag 'In-2C-48px-R.png', class:"footer-logo", alt:"Linkedin"  %></a>
     </div>
     <div class="footer-social">
       <%= link_to "Contact", contact_path %>
