Adding form stuff for editing status

--- a/app/views/admin/lessons/_form.html.erb
+++ b/app/views/admin/lessons/_form.html.erb
@@ -28,6 +28,8 @@
   </div>
   <% end %>
 
+  <%= render "shared/form_status", form: f, entity: @lesson %>
+
   <div class="field">
     <%= f.label :order %>
     <%= f.text_field :order %>
