--- a/app/views/admin/project_sets/_form.html.erb
+++ b/app/views/admin/project_sets/_form.html.erb
@@ -12,6 +12,8 @@
     </div>
   <% end %>
 
+  <%= render "shared/form_status", form: f, entity: @project_set %>
+
   <div class="field">
     <%= f.label :title %>
     <%= f.text_field :title %>
