--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -67,7 +67,7 @@
     <% if @project.common_core.present? %>
       <a><div class='collapsible' id='project-common-core'>
         <div>
-          <h2>common core<span class="glyphicon glyphicon-plus"></span></h2>
+          <h2 class="collapsible-heading">common core<span><h2 class="collapsible-plus">+</h2></span></h2>
         </div>
       </div></a>
       <div class='project-common-core-collapsed collapsed' hidden>
@@ -78,7 +78,7 @@
     <% if @project.national_core.present?  %>
       <a><div class='collapsible' id='project-national-core'>
         <div>
-          <h2>national core visual art standards<span class="glyphicon glyphicon-plus"></span></h2>
+          <h2 class="collapsible-heading">national core visual art standards<span><h2 class="collapsible-plus">+</h2></span></h2>
         </div>
       </div></a>
       <div class='project-national-core-collapsed collapsed' hidden>
