adding timestamps to intro and worktime

--- a/app/views/admin/lessons/_form.html.erb
+++ b/app/views/admin/lessons/_form.html.erb
@@ -124,6 +124,11 @@
   </div>
 
   <div class="field">
+    <%= f.label :intro_time %>
+    <%= f.text_field :intro_time %>
+  </div>
+
+  <div class="field">
     <%= f.label :pre_work_heading %>
     <%= f.text_field :pre_work_heading %>
   </div>
@@ -161,6 +166,11 @@
   <div class="field">
     <%= f.label :group_worktime %>
     <%= f.text_field :group_worktime %>
+  </div>
+
+  <div class="field">
+    <%= f.label :worktime_time %>
+    <%= f.text_field :worktime_time %>
   </div>
 
   <div class="field">
